--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="abt"></div>
             <div class="about-ceo">
                 <div class="img">
-                <img src="C:\Users\gargy\Desktop\interior-desing-main\interior-desing-main\images\WhatsApp Image 2023-01-29 at 08.23.40.jpg" alt="Ceo image">
+                <img src="images/WhatsApp Image 2023-01-29 at 08.23.40.jpg" alt="Ceo image">
                 </div>
                 <div class="about-us">
                 <h1 id="ABT"><span>A</span>bout <span>U</span>s</h1>
